fix: footer align

--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -1,6 +1,5 @@
 :host {
   display: block;
-  align-self: flex-end;
 }
 
 .footer_container {
